--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,17 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@600&family=Roboto:wght@300&display=swap');
+@import './themes/variables.scss';
+@import './themes/remc.scss';
+
+*,
+*:after,
+*:before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+}
+body{
+  font-size: 100%;
+  list-style-type: none;
+  font-family: 'Roboto', sans-serif;
+}
